3821B1FI2/6_block_gemm_cuda/travin_maksim/log.txt
/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(6): error: incomplete type "void" is not allowed
  void CUDA_CHECK(error) {
       ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(6): error: identifier "error" is undefined
  void CUDA_CHECK(error) {
                  ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(6): error: expected a ";"
  void CUDA_CHECK(error) {
                         ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(39): warning #12-D: parsing restarts here after previous syntax error
          __syncthreads();
                         ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(40): error: expected a declaration
      }
      ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(43): error: expected a declaration
  }
  ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(69): warning #12-D: parsing restarts here after previous syntax error
      CUDA_CHECK(cudaMemcpy(c.data(), d_c, bytes, cudaMemcpyDeviceToHost));
                                                                          ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(71): error: this declaration has no storage class or type specifier
      CUDA_CHECK(cudaFree(d_a));
      ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(71): error: variable "CUDA_CHECK" has already been defined (previous definition at line 6)
      CUDA_CHECK(cudaFree(d_a));
      ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(71): error: identifier "d_a" is undefined
      CUDA_CHECK(cudaFree(d_a));
                          ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(72): error: this declaration has no storage class or type specifier
      CUDA_CHECK(cudaFree(d_b));
      ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(72): error: variable "CUDA_CHECK" has already been defined (previous definition at line 6)
      CUDA_CHECK(cudaFree(d_b));
      ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(72): error: identifier "d_b" is undefined
      CUDA_CHECK(cudaFree(d_b));
                          ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(73): error: this declaration has no storage class or type specifier
      CUDA_CHECK(cudaFree(d_c));
      ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(73): error: variable "CUDA_CHECK" has already been defined (previous definition at line 6)
      CUDA_CHECK(cudaFree(d_c));
      ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(73): error: identifier "d_c" is undefined
      CUDA_CHECK(cudaFree(d_c));
                          ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(75): error: expected a declaration
      return c;
      ^

/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu(76): error: expected a declaration
  }
  ^

16 errors detected in the compilation of "/home/crazyproger/sandbox/cuda-2024/3821B1FI2/6_block_gemm_cuda/travin_maksim/block_gemm_cuda.cu".
